--- a/sfg-pet-clinic/pet-clinic-web/src/main/resources/templates/owners/index.html
+++ b/sfg-pet-clinic/pet-clinic-web/src/main/resources/templates/owners/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" th:replace="~{fragments/layout :: layout (~{::body}, 'owners')}">
 <head>
     <meta charset="UTF-8">
     <title>List of Owners</title>
 </head>
 <body>
-  <h1 th:text="'Text of Owners'">Owner list</h1>
-    <table>
+  <h2 th:text="'Text of Owners'">Owner list</h2>
+    <table class="table table-striped">
         <thead>
-            <th>Id</th>
-            <th>First Name</th>
-            <th>Last Name</th>
+            <th style="width: 150px;">Id</th>
+            <th style="width: 150px;">First Name</th>
+            <th style="width: 150px;">Last Name</th>
         </thead>
         <tbody>
             <tr th:each="owner : ${owners}">
